--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\danie\Documents\Web Development\HTML - Personal Site\Images\Default Profile Pic.png" alt="Placeholder Profile Picture" height=200 width=200>
+      <td><img src="Images\Default Profile Pic.png" alt="Placeholder Profile Picture" height=200 width=200>
 </td>
       <td><h1>Daniel Visage</h1>
         <p><em>Learning <strong><a href="https://en.wikipedia.org/wiki/Web_development">Web Development</a></strong>.</em></p>
